# palomaswap-amm

./: Cargo.toml  README.md
contracts/factory/: Cargo.toml  README.md
contracts/factory/examples/: factory_schema.rs
contracts/factory/schema/: config_response.json  execute_msg.json  instantiate_msg.json  pair_info.json  pairs_response.json  query_msg.json
contracts/factory/src/: contract.rs  migration.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contracts/factory/tests/: factory_helper.rs  integration.rs
contracts/pair/: Cargo.toml  README.md
contracts/pair/examples/: pair_schema.rs
contracts/pair/schema/: paloma-pair.json
contracts/pair/src/: contract.rs  error.rs  mock_querier.rs  state.rs  testing.rs
contracts/pair/tests/: integration.rs
contracts/pair_astro_xastro/: Cargo.toml  README.md
contracts/pair_astro_xastro/examples/: pair_astro_xastro_schema.rs
contracts/pair_astro_xastro/schema/: paloma-pair-astro-xastro.json
contracts/pair_astro_xastro/src/: contract.rs  lib.rs  state.rs
contracts/pair_astro_xastro/tests/: integration.rs
contracts/pair_stable/: Cargo.toml  README.md
contracts/pair_stable/schema/: paloma-pair-stable.json
contracts/pair_stable/src/: contract.rs  error.rs  math.rs  migration.rs  mock_querier.rs  state.rs  testing.rs  utils.rs
contracts/pair_stable/tests/: 3pool_tests.rs  helper.rs  integration.rs
contracts/pair_stable_bgrain/: Cargo.toml  README.md
contracts/pair_stable_bgrain/.cargo/: config
contracts/pair_stable_bgrain/examples/: pair_stable_bgrain_schema.rs
contracts/pair_stable_bgrain/src/: contract.rs  math.rs  migration.rs  mock_querier.rs  state.rs  testing.rs
contracts/pair_stable_bgrain/tests/: integration.rs
contracts/pair_stable_bluna/: README.md
contracts/periphery/oracle/: Cargo.toml  README.md
contracts/periphery/oracle/examples/: oracle_schema.rs
contracts/periphery/oracle/src/: contract.rs  mock_querier.rs  querier.rs  state.rs  testing.rs
contracts/periphery/oracle/tests/: integration.rs
contracts/router/: Cargo.toml  README.md
contracts/router/examples/: router_schema.rs
contracts/router/schema/: paloma-router.json
contracts/router/src/: contract.rs  operations.rs  state.rs
contracts/router/src/testing/: mock_querier.rs  tests.rs
contracts/router/tests/: factory_helper.rs  router_integration.rs
contracts/token/: Cargo.toml  README.md
contracts/token/examples/: token_schema.rs
contracts/token/schema/: paloma-token.json
contracts/token/src/: contract.rs
contracts/tokenomics/generator/: Cargo.toml  README.md
contracts/tokenomics/generator/examples/: generator_schema.rs
contracts/tokenomics/generator/src/: contract.rs  error.rs  migration.rs  state.rs
contracts/tokenomics/generator/tests/: integration.rs
contracts/tokenomics/generator/tests/test_utils/: controller_helper.rs  delegation_helper.rs  escrow_helper.rs
contracts/tokenomics/generator_proxy_to_mirror/: Cargo.toml  README.md
contracts/tokenomics/generator_proxy_to_mirror/examples/: generator_proxy_to_mirror_schema.rs
contracts/tokenomics/generator_proxy_to_mirror/src/: contract.rs  state.rs
contracts/tokenomics/maker/: Cargo.toml  README.md
contracts/tokenomics/maker/examples/: maker_schema.rs
contracts/tokenomics/maker/src/: contract.rs  error.rs  state.rs  testing.rs  utils.rs
contracts/tokenomics/maker/tests/: integration.rs
contracts/tokenomics/staking/: Cargo.toml  README.md
contracts/tokenomics/staking/examples/: staking_schema.rs
contracts/tokenomics/staking/src/: contract.rs
contracts/tokenomics/staking/tests/: integration.rs
contracts/tokenomics/vesting/: Cargo.toml  README.md
contracts/tokenomics/vesting/examples/: vesting_schema.rs
contracts/tokenomics/vesting/src/: contract.rs  state.rs  testing.rs
contracts/tokenomics/vesting/tests/: integration.rs
contracts/tokenomics/xastro_token/: Cargo.toml  README.md
contracts/tokenomics/xastro_token/examples/: xastro_token_schema.rs
contracts/tokenomics/xastro_token/src/: contract.rs  testing.rs
contracts/whitelist/: Cargo.toml
contracts/whitelist/schema/: paloma-whitelist.json
contracts/whitelist/src/: contract.rs
scripts/: contract_version.ts  deploy_core.ts  deploy_pools.ts  deploy_token.ts  helpers.ts  migrate.ts  package-lock.json  package.json
scripts/chain_configs/: localterra.json  paloma-testnet-13.json  paloma-testnet-15.json  phoenix-1.json  pisco-1.json
scripts/tests/: lib.ts  test_generator.ts  test_router.ts  tests.ts
scripts/types.d/: astroport_deploy_interfaces.ts
templates/generator_proxy_template/: Cargo.toml  README.md
templates/generator_proxy_template/examples/: generator_proxy_template_schema.rs
templates/generator_proxy_template/src/: contract.rs  state.rs
templates/pair_bonded_template/: Cargo.toml  README.md
templates/pair_bonded_template/examples/: pair_bonded_template_schema.rs
templates/pair_bonded_template/src/: contract.rs
