[package]
name = "paloma-pair"
version = "1.0.0"
authors = ["Paloma"]
edition = "2021"
description = "The Paloma constant product pool contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
paloma = { path = "../../packages/paloma", default-features = false}
cw2 = { version = "0.15" }
cw20 = { version = "0.15" }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-schema = "1.1"

[dev-dependencies]
paloma-token = {path = "../token"}
cw-multi-test = "0.15"
paloma-factory = {path = "../factory"}
proptest = "1.0"
