[package]
name = "paloma-pair-stable"
version = "2.0.0"
authors = ["Paloma"]
edition = "2021"
description = "The Paloma stableswap pair contract implementation"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
paloma = { path = "../../packages/paloma", default-features = false }
cw2 = { version = "0.15" }
cw20 = { version = "0.15" }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
itertools = "0.10"
cosmwasm-schema = "1.1"

[dev-dependencies]
anyhow = "1.0"
proptest = "1.0.0"
sim = { git = "https://github.com/astroport-fi/astroport-sims.git", rev = "6869900d4db9061ff8f0c1bfd7c7560056f7e74f", package = "sim" }
paloma-token = {path = "../token"}
cw-multi-test = "0.15"
paloma-factory = {path = "../factory"}
derivative = "0.3"
