[package]
name = "paloma-pair-stable-bgrain"
version = "1.0.2"
authors = ["Paloma"]
edition = "2021"
description = "The Paloma stableswap pair contract implementation specifically designed for a pair that contains bGRAIN"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
integer-sqrt = "0.1.5"
paloma = { path = "../../packages/paloma", default-features = false }
cw2 = { version = "0.15" }
cw20 = { version = "0.15" }
cosmwasm-std = { version = "1.1" }
cw1-whitelist =  { version = "0.15" }
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
#anchor-basset = {git = "https://github.com/Anchor-Protocol/anchor-bAsset-contracts.git", tag = "v0.2.1", package = "basset"}
cosmwasm-schema = "1.1"

[dev-dependencies]
proptest = "1.0.0"
sim = { git = "https://github.com/astroport-fi/astroport-sims.git", rev = "d617510737ee2c529d3aaa7afbdac5ccb5a385c9", package = "sim" }
paloma-token = {path = "../token"}
cw-multi-test = "0.15"
paloma-factory = {path = "../factory"}
paloma-whitelist = {path = "../whitelist"}
