[package]
name = "paloma-pair-bonded-template"
version = "1.0.0"
authors = ["Paloma"]
edition = "2021"
description = "The Paloma pair-bonded template."
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
paloma = { path = "../../packages/paloma", default-features = false }
paloma-pair-bonded = { path = "../../packages/pair_bonded" }
cw2 = { version = "0.15" }
cw20 = { version = "0.15" }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
cosmwasm-schema = { version = "1.1" }