[package]
name = "paloma-generator"
version = "2.2.1"
authors = ["Paloma"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1" }
cw2 = { version = "0.15" }
cw20 = { version = "0.15" }
cw-storage-plus = "0.15"
cw1-whitelist =  { version = "0.15", features = ["library"] }
thiserror = { version = "1.0" }
paloma = { path = "../../../packages/paloma", default-features = false}
astroport-governance = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main"}
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-schema = { version = "1.1" }

[dev-dependencies]
cw-multi-test = "0.15"
paloma-token = {path = "../../token"}
paloma-vesting = {path = "../vesting"}
paloma-staking = {path = "../staking"}

paloma-factory = {path = "../../factory"}
paloma-pair = {path = "../../pair"}
paloma-pair-stable = {path = "../../pair_stable"}
paloma-whitelist = { path = "../../whitelist" }
anyhow = "1.0"
generator-controller = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main" }
voting-escrow = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main" }
voting-escrow-delegation = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main" }
astroport-nft = { git = "https://github.com/astroport-fi/astroport-governance.git", branch = "main" }
cw721-base = { version = "0.15", features = ["library"] }

generator-proxy-to-vkr = { git = "https://github.com/astroport-fi/astro-generator-proxy-contracts.git", branch = "main" }
valkyrie = { git = "https://github.com/valkyrieprotocol/contracts.git", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54"  }
valkyrie-lp-staking = { git = "https://github.com/valkyrieprotocol/contracts.git", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
valkyrie-vp = { git = "https://github.com/valkyrieprotocol/contracts.git", rev = "b5fcb666f17d7e291f40365756e50fc0d7b9bf54" }
